--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
     <packaging>pom</packaging>
     <version>0.0.1-SNAPSHOT</version>
 
-    
 
+    <modules>
+        <module>eureka-server</module>
+    </modules>
 </project>
