--- a/service-a/src/main/resources/application-default.yml
+++ b/service-a/src/main/resources/application-default.yml
@@ -1,3 +1,30 @@
 appconfig:
     id: 123default
     key: 456default
+spring:
+  datasource:
+    url: jdbc:mysql://dmxiaoshen.mysql.com:5506/spring_boot_demo?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    username: root
+    password: dmxiaoshen
+    driver-class-name: com.mysql.jdbc.Driver
+    type: com.zaxxer.hikari.HikariDataSource
+    hikari:
+      auto-commit: true
+      minimum-idle: 5
+      maximum-pool-size: 15
+      idle-timeout: 30000
+      pool-name: DatebookHikariCP
+      max-lifetime: 1800000
+      connection-timeout: 30000
+      connection-test-query: SELECT 1
+
+mybatis:
+  mapper-locations: classpath:/mappers/*Dao.xml
+
+pagehelper:
+  reasonable: true
+  helper-dialect: mysql
+  #\u5141\u8BB8\u5728\u8FD0\u884C\u65F6\u6839\u636E\u591A\u6570\u636E\u6E90\u81EA\u52A8\u8BC6\u522B\u5BF9\u5E94\u65B9\u8A00\u7684\u5206\u9875
+  #auto-runtime-dialect: true
+  #\u65E7\u7248\u7528dialect \u6700\u65B0\u4F7F\u7528helper-dialect
+  #dialect: mysql
